--- a/docker-centos-tools/Dockerfile
+++ b/docker-centos-tools/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER YsiCing Zheng <root@ysicing.net>
 RUN yum makecache;yum install -y wget curl net-tools openssh-server openssh-clients; \
     wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo; \
     wget -O /etc/yum.repos.d/epel.repo http://mirrors.aliyun.com/repo/epel-7.repo; \
-    yum makecache;yum install -y sysbench; \
+    yum makecache;yum install -y sysbench iperf3; \
     yum clean all;
 
 EXPOSE  22
